trunk/Archive2/e0/06b7ff721da78c/output
main.cpp:7:38: error: parenthesized initialization of a member array is a GNU extension [-Wgnu-array-member-paren-init]
        foo(double x, double y, double z) : a({x, y, z}) {}
                                            ^ ~~~~~~~~~
1 error generated.
